--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <div>
-    <img align="left" src="assets/images/gal1leo.gif">
+    <img align="left" src="/assets/images/gal1leo.gif">
     <div align="middle">
         <h1>Posts</h1>
         {% for post in site.posts limit:5 %}
