--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <div>
-    <img align="left" src="../assets/gal1leo.gif">
+    <img align="left" src="http://image.blingee.com/images16/content/output/000/000/000/568/446549666_1797457.gif">
     <div align="middle">
         <h1>Posts</h1>
         {% for post in site.posts limit:5 %}
