--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-
+<div>
 	<img align="left" src="https://pbs.twimg.com/profile_images/788575098487791616/a2vnnidg_400x400.jpg">
             <div align="middle">
                 <h1>Posts</h1>
@@ -18,7 +18,7 @@ layout: default
                 <br><br><br><br><br>
 
             </div>
-
+</div>
 
 <div align="left">
 <hr>
