--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 <div align="middle">
-	<img align="left" src="https://pbs.twimg.com/profile_images/788575098487791616/a2vnnidg_400x400.jpg">
+	<img align="left" src="https://pbs.twimg.com/profile_images/788575098487791616/a2vnnidg_400x400.jpg" height=250px width=250px>
 
                 <h1>Posts</h1>
                 {% for post in site.posts limit:5 %}
