--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 <div align="middle">
-	<img style="display:block !important;" align="left" src="https://pbs.twimg.com/profile_images/788575098487791616/a2vnnidg_400x400.jpg" height=200px width=200px>
+	<img align="left" src="https://pbs.twimg.com/profile_images/788575098487791616/a2vnnidg_400x400.jpg" height=200px width=200px>
 
                 <h1>Posts</h1>
                 {% for post in site.posts limit:5 %}
@@ -16,7 +16,7 @@ layout: default
                     </article>
                 {% endfor %}
 </div>
-
+<br><br><br><br><br><br><br>
 <div align="left">
 <hr>
 </div>
