--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ layout: default
 <div align="middle">
 	<img align="left" src="{{ site.baseurl }}assets/gal1leo.gif" height=200px width=200px>
 
-                <h1 style="font-family:8Bit;">Posts</h1>
+                <h1 id="8bit">Posts</h1>
                 {% for post in site.posts limit:5 %}
                     <article>
                         <h4>
