--- a/index.html
+++ b/index.html
@@ -1,10 +1,16 @@
 ---
 layout: default
 ---
+<style>
+@font-face {
+	font-family: "ohgodno";
+	src: url("./assets/Pixeboy.ttf");
+}
+</style>
 <div align="middle">
 	<img align="left" src="{{ site.baseurl }}assets/gal1leo.gif" height=200px width=200px>
 
-                <h1 id="8bit">Posts</h1>
+                <h1 style="font-family: 'ohgodno', sans-serif;">Posts</h1>
                 {% for post in site.posts limit:5 %}
                     <article>
                         <h4>
