--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ layout: default
 <div align="middle">
 	<img align="left" src="{{ site.baseurl }}assets/gal1leo.gif" height=200px width=200px>
 
-                <h1 style="font-family: 'ohgodno', sans-serif;">Posts</h1>
+                <h1 style="font-family: 'ohgodno';">Posts</h1>
                 {% for post in site.posts limit:5 %}
                     <article>
                         <h4>
