--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <div align="middle">
-	<img align="left" src="{{ site.baseurl }}assets/gal1leo.gif" height=200px width=200px>
+	<img align="left" src="{{ site.baseurl }}assets/skull.gif" height=200px width=200px>
 
                 <h1 style="font-family: 'ohgodno';font-size: 300%;">Posts</h1>
                 {% for post in site.posts limit:5 %}
