--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@ layout: default
     </div>
     
     <!-- Script pointing to search-script.js -->
-    <script src="/path/to/search-script.js" type="text/javascript"></script>
+    <script src="{{ site.baseurl }}search-script.js" type="text/javascript"></script>
     
     <!-- Configuration -->
     <script>
     SimpleJekyllSearch({
       searchInput: document.getElementById('search-input'),
       resultsContainer: document.getElementById('results-container'),
-      json: '/search.json'
+      json: '{{ site.baseurl }}search.json'
     })
 </script>
 
