--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ layout: default
     <div align="middle">
         <img align="left" src="{{ site.baseurl }}assets/skull.gif" height=300px width=300px>
 
-                    <h1 style="font-family: 'ohgodno';font-size: 300%;">Posts</h1>
+                    <h1 style="font-family: 'ohgodno';font-size: 300%;">Latest Posts</h1>
                     
                     {% for post in site.posts limit:5 %}
                         <article>
