--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 ---
 layout: default
 ---
+<head>
+    <meta property="og:image" content="https://gal1leo.tk/assets/mickyG.jpg"/> 
+</head>
 <body>
     <div align="middle">
         <img align="left" src="{{ site.baseurl }}assets/skull.gif" height=300px width=300px>
