--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 ---
 layout: default
+image: "mickyG.jpg"
 ---
-<head>
-    <meta property="og:image" content="https://gal1leo.tk/assets/mickyG.jpg"/> 
-</head>
+
 <body>
     <div align="middle">
         <img align="left" src="{{ site.baseurl }}assets/skull.gif" height=300px width=300px>
