--- a/secret.html
+++ b/secret.html
@@ -3,4 +3,4 @@ layout: default
 image: "mickyG.jpg"
 ---
 
-<audio controls><source src="https://stream.hitfm.md:8443/00_hits?type=.mp3" type=”audio/mp3”>Your browser does not support the audio element.</audio>
+<audio controls><source src="https://stream.hitfm.md:8443/00_hits?type=.mp3" type=”audio/MPEG”>Your browser does not support the audio element.</audio>
