--- a/secret.html
+++ b/secret.html
@@ -3,4 +3,10 @@ layout: default
 image: "mickyG.jpg"
 ---
 
-<audio controls><source src="https://stream.hitfm.md:8443/00_hits?type=.mp3" type=”audio/MPEG”>Your browser does not support the audio element.</audio>
+<center>
+    <audio controls>
+        <source src="https://stream.hitfm.md:8443/00_hits?type=.mp3" type=”audio/MPEG”>
+        Your browser does not support the audio element.
+    </audio>
+    <h1>Hit me up if you know how to make it play the music</h1>
+</center>
