--- a/secret.html
+++ b/secret.html
@@ -10,3 +10,6 @@ image: "mickyG.jpg"
     </audio>
     <h1>Hit me up if you know how to make it play the music</h1>
 </center>
+
+<script src="https://panzi.github.io/Browser-Ponies/basecfg.js" id="browser-ponies-config"></script>
+<script src="https://panzi.github.io/Browser-Ponies/browserponies.js" id="browser-ponies-script"></script>
