--- a/secret.html
+++ b/secret.html
@@ -2,6 +2,7 @@
 layout: default
 image: "taco.png"
 ---
+<script>
 const fs = require('fs')
       
     // Data which will write in a file.
@@ -13,3 +14,4 @@ const fs = require('fs')
         // In case of a error throw err.
         if (err) throw err;
     })
+</script>
