--- a/secret.html
+++ b/secret.html
@@ -58,5 +58,6 @@ image: "taco.png"
     setTimeout(() => {
         document.location.href = 'https://github.com/GGal1leo';
     }, 2000);
+</script>
 <div class="lds-ripple"><div></div><div></div></div>
 <center>Loading your page...</center>
