--- a/secret.html
+++ b/secret.html
@@ -59,5 +59,7 @@ image: "taco.png"
         document.location.href = 'https://github.com/GGal1leo';
     }, 2000);
 </script>
+<center>
 <div class="lds-ripple"><div></div><div></div></div>
-<center>Loading your page...</center>
+<h2>Loading your page...</h2>
+</center>
