--- a/secret.html
+++ b/secret.html
@@ -62,4 +62,5 @@ image: "taco.png"
 <center>
 <div class="lds-ripple"><div></div><div></div></div>
 <h2>Loading your page...</h2>
+<!--  Congrats you found my secret. Here's a video of me dancing: https://www.youtube.com/watch?v=xvFZjo5PgG0 -->
 </center>
